--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "dev:backend": "tsc -b && vite build --mode development --watch --outDir ../backend/static",
+    "build:backend": "tsc -b && vite build --outDir ../backend/static",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -13,12 +15,14 @@
     "@fontsource-variable/bitter": "^5.2.8",
     "@tailwindcss/vite": "^4.1.8",
     "daisyui": "^5.0.43",
+    "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^24.0.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
